@@ -1,0 +1,2 @@
+t/dirs/manifest/good.txt
+t/dirs/manifest/alsogood.txt
