@@ -2,6 +2,7 @@ Changes
 
 0.06
      - Remove dep on File::Slurp
+     - Added manifest option
 
 0.05
      - Use File::Find instead of File::Finder
